# aoc-2022

./: pyproject.toml
01/: main.py
02/: main.py
03/: main.py
04/: main.py
