[tool.poetry]
name = "aoc-2022"
version = "0.1.0"
description = ""
authors = ["relby <kudinov.nikita@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc_2022"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
